--- a/roles/dns/configure/templates/forward.db.j2
+++ b/roles/dns/configure/templates/forward.db.j2
@@ -18,6 +18,7 @@ ansible     IN  A       {{ reverse_zone}}.3
 node1       IN  A       {{ reverse_zone}}.4
 node2       IN  A       {{ reverse_zone}}.5
 kibana      IN  A       {{ reverse_zone}}.6
+minio       IN  A       {{ reverse_zone}}.7
 
 ;CNAME record
 ;ftp     IN CNAME        www.hosting.local.
