--- a/roles/dns/configure/templates/reverse.db.j2
+++ b/roles/dns/configure/templates/reverse.db.j2
@@ -18,3 +18,4 @@ $TTL 86400
 4      IN  PTR     node1.{{ forward_zone}}.
 5      IN  PTR     node2.{{ forward_zone}}.
 6      IN  PTR     kibana.{{ forward_zone}}.
+7      IN  PTR     minio.{{ forward_zone}}.
