--- a/templates/singlenode.elasticsearch.yml.j2
+++ b/templates/singlenode.elasticsearch.yml.j2
@@ -25,6 +25,8 @@ node.name:  {{ ansible_hostname}}
 # Add custom attributes to the node:
 #
 #node.attr.rack: r1
+
+node.roles: "{{ es_node_roles }}"
 #
 # ----------------------------------- Paths ------------------------------------
 #
@@ -53,7 +55,7 @@ path.logs: /var/log/elasticsearch
 # By default Elasticsearch is only accessible on localhost. Set a different
 # address here to expose this node on the network:
 #
-#network.host: 192.168.0.1
+network.host: "{{ ansible_eth0.ipv4.address }}"
 #
 # By default Elasticsearch listens for HTTP traffic on the first free port it
 # finds starting at 9200. Set a specific HTTP port here:
@@ -71,7 +73,7 @@ discovery.seed_hosts: {{ es_discovery_seed_hosts }}
 #
 # Bootstrap the cluster using an initial set of master-eligible nodes:
 #
-#cluster.initial_master_nodes: {{ es_cluster_initial_master_nodes }}
+cluster.initial_master_nodes: {{ es_cluster_initial_master_nodes }}
 #
 # For more information, consult the discovery and cluster formation module documentation.
 #
