--- a/templates/singlenode.elasticsearch.yml.j2
+++ b/templates/singlenode.elasticsearch.yml.j2
@@ -93,4 +93,10 @@ xpack.security.transport.ssl.keystore.password: {{ es_clustername }}
 xpack.security.transport.ssl.truststore.path: /etc/elasticsearch/certs/{{ es_clustername}}.p12
 xpack.security.transport.ssl.truststore.password: {{ es_clustername }}
 
+xpack.security.http.ssl.enabled: true
+xpack.security.http.ssl.keystore.path: /etc/elasticsearch/certs/cert-{{ ansible_hostname}}.p12
+xpack.security.http.ssl.keystore.password: {{ es_clustername }}
+xpack.security.http.ssl.truststore.path: /etc/elasticsearch/certs/{{ es_clustername}}.p12
+xpack.security.http.ssl.truststore.password: {{ es_clustername }}
+
 {% endif %}
