--- a/templates/singlenode.kibana.yml.j2
+++ b/templates/singlenode.kibana.yml.j2
@@ -123,3 +123,9 @@ server.ssl.enabled: true
 # Specifies locale to be used for all localizable strings, dates and number formats.
 # Supported languages are the following: English - en , by default , Chinese - zh-CN .
 #i18n.locale: "en"
+
+# encryption keys
+xpack.encryptedSavedObjects.encryptionKey: changemeeb1660a77119d9210982e9eafcc96134
+xpack.reporting.encryptionKey: changeme19d3f68aacb396e2b2a4106693d0ff41
+xpack.security.encryptionKey: changeme329b0faa9aa3da870d1d3b4e984eac42
+#
