--- a/templates/singlenode.kibana.yml.j2
+++ b/templates/singlenode.kibana.yml.j2
@@ -129,3 +129,7 @@ xpack.encryptedSavedObjects.encryptionKey: {{ kbn_xpack_encryptedSavedObjects_en
 xpack.reporting.encryptionKey: {{ kbn_xpack_reporting_encryptionKey}}
 xpack.security.encryptionKey: {{kbn_xpack_security_encryptionKey}}
 #
+server.publicBaseUrl: "{{ kbn_server_publicBaseUrl }}"
+#
+#
+#
