--- a/roles/metricbeat/configure/templates/elasticsearch-xpack.yml.j2
+++ b/roles/metricbeat/configure/templates/elasticsearch-xpack.yml.j2
@@ -4,7 +4,7 @@
 - module: elasticsearch
   xpack.enabled: true
   period: 10s
-  hosts: ["http://localhost:9200"]
+  hosts: ["http://{{ ansible_hostname }}:9200"]
   #username: "user"
   #password: "secret"
 
