--- a/roles/metricbeat/configure/templates/kibana-xpack.yml.j2
+++ b/roles/metricbeat/configure/templates/kibana-xpack.yml.j2
@@ -4,7 +4,7 @@
 - module: kibana
   xpack.enabled: true
   period: 10s
-  hosts: ["localhost:5601"]
+  hosts: ["{{ ansible_hostname }}:5601"]
   #basepath: ""
   #username: "user"
   #password: "secret"
