--- a/roles/metricbeat/configure/templates/metricbeat.yml.j2
+++ b/roles/metricbeat/configure/templates/metricbeat.yml.j2
@@ -91,10 +91,16 @@ setup.kibana:
 # ---------------------------- Elasticsearch Output ----------------------------
 output.elasticsearch:
   # Array of hosts to connect to.
-  hosts: ["localhost:9200"]
+  hosts: ["{{ mb_ingest}}:9200"]
 
   # Protocol - either `http` (default) or `https`.
-  #protocol: "https"
+
+  {% if es_tls == true %}
+  protocol: "https"
+  {% else %}
+  protocol: "http"
+  {% endif  %}
+  
 
   # Authentication credentials - either API key or username/password.
   #api_key: "id:api_key"
