--- a/roles/metricbeat/configure/templates/elasticsearch-xpack.yml.j2
+++ b/roles/metricbeat/configure/templates/elasticsearch-xpack.yml.j2
@@ -4,7 +4,12 @@
 - module: elasticsearch
   xpack.enabled: true
   period: 10s
+
+  {% if es_tls == true %}
+  hosts: ["https://{{ ansible_hostname }}:9200"]
+  {% else %}
   hosts: ["http://{{ ansible_hostname }}:9200"]
+  {% endif  %}
   #username: "user"
   #password: "secret"
 
