--- a/roles/metricbeat/configure/templates/metricbeat.yml.j2
+++ b/roles/metricbeat/configure/templates/metricbeat.yml.j2
@@ -106,6 +106,10 @@ output.elasticsearch:
   #username: "elastic"
   #password: "changeme"
 
+{% if es_tls == true %}
+  output.elasticsearch.ssl.certificate_authorities: /etc/logstash/{{es_clustername}}.crt
+{% endif  %}
+
 # ------------------------------ Logstash Output -------------------------------
 #output.logstash:
   # The Logstash hosts
