--- a/roles/metricbeat/configure/templates/elasticsearch-xpack.yml.j2
+++ b/roles/metricbeat/configure/templates/elasticsearch-xpack.yml.j2
@@ -13,3 +13,7 @@
   #username: "user"
   #password: "secret"
 
+
+{% if es_tls == true %}
+  ssl.certificate_authorities: ["/etc/logstash/certs/{{ es_clustername }}.crt"]
+{% endif  %}
