--- a/roles/minio/install/templates/minio.service.j2
+++ b/roles/minio/install/templates/minio.service.j2
@@ -1,21 +1,19 @@
 [Unit]
-Description=Kibana
-Documentation=https://www.elastic.co
+Description=minio
+Documentation=https://min.io
 Wants=network-online.target
 After=network-online.target
 
 [Service]
 Type=simple
-User=kibana
-Group=kibana
+User={{ mi_user}}
+Group={{ mi_group }}
 
-Environment=KBN_HOME=/usr/share/kibana
-Environment=KBN_PATH_CONF=/etc/kibana
+Environment=MI_HOME={{ mi_home }}
+Environment=MI_CONF={{ mi_conf }}
 
-EnvironmentFile=-/etc/default/kibana
-EnvironmentFile=-/etc/sysconfig/kibana
 
-ExecStart=/usr/share/kibana/bin/kibana --logging.dest="/var/log/kibana/kibana.log" --pid.file="/run/kibana/kibana.pid"
+ExecStart={{ mi_home}}/minio
 
 Restart=on-failure
 RestartSec=3
@@ -23,7 +21,7 @@ RestartSec=3
 StartLimitBurst=3
 StartLimitInterval=60
 
-WorkingDirectory=/usr/share/kibana
+WorkingDirectory={{ mi_home}}
 
 StandardOutput=journal
 StandardError=inherit
