--- a/templates/singlenode.kibana.yml.j2
+++ b/templates/singlenode.kibana.yml.j2
@@ -52,7 +52,13 @@ server.ssl.enabled: true
 # the username and password that the Kibana server uses to perform maintenance on the Kibana
 # index at startup. Your Kibana users still need to authenticate with Elasticsearch, which
 # is proxied through the Kibana server.
-#elasticsearch.username: "kibana_system"
+
+{% if es_security == true %}
+elasticsearch.username: "kibana_system"
+{% endif %}
+
+
+
 #elasticsearch.password: "pass"
 
 # Kibana can also authenticate to Elasticsearch via "service account tokens".
