--- a/templates/singlenode.elasticsearch.yml.j2
+++ b/templates/singlenode.elasticsearch.yml.j2
@@ -84,7 +84,7 @@ cluster.initial_master_nodes: {{ es_cluster_initial_master_nodes }}
 #action.destructive_requires_name: true
 
 
-{% if es_tls == true %}
+{% if es_security == true %}
 xpack.security.enabled: true
 {% endif %}
 
