--- a/roles/zookeeper/install/templates/zookeeper.service.j2
+++ b/roles/zookeeper/install/templates/zookeeper.service.j2
@@ -1,6 +1,6 @@
 [Unit]
-Description=minio
-Documentation=https://min.io
+Description=zookeeper
+Documentation=https://kafka.apache.org/
 Wants=network-online.target
 After=network-online.target
 
