--- a/roles/dns/configure/templates/forward.db.j2
+++ b/roles/dns/configure/templates/forward.db.j2
@@ -19,6 +19,9 @@ node1       IN  A       {{ reverse_zone}}.4
 node2       IN  A       {{ reverse_zone}}.5
 kibana      IN  A       {{ reverse_zone}}.4
 minio       IN  A       {{ reverse_zone}}.7
+kafka1       IN  A       {{ reverse_zone}}.8
+kafka2       IN  A       {{ reverse_zone}}.9
+kafka3       IN  A       {{ reverse_zone}}.10
 
 ;CNAME record
 ;ftp     IN CNAME        www.hosting.local.
