--- a/roles/dns/configure/templates/reverse.db.j2
+++ b/roles/dns/configure/templates/reverse.db.j2
@@ -19,3 +19,6 @@ $TTL 86400
 5      IN  PTR     node2.{{ forward_zone}}.
 6      IN  PTR     kibana.{{ forward_zone}}.
 7      IN  PTR     minio.{{ forward_zone}}.
+8      IN  PTR     kafka1.{{ forward_zone}}.
+9      IN  PTR     kafka2.{{ forward_zone}}.
+10     IN  PTR     kafka3.{{ forward_zone}}.
