--- a/templates/kafka-cluster.zookeeper.properties.j2
+++ b/templates/kafka-cluster.zookeeper.properties.j2
@@ -26,3 +26,5 @@ admin.enableServer=false
 server.1=kafka1:2888:3888
 server.2=kafka2:2888:3888
 server.3=kafka3:2888:3888
+
+4lw.commands.whitelist=*
