--- a/templates/kafka-cluster.zookeeper.properties.j2
+++ b/templates/kafka-cluster.zookeeper.properties.j2
@@ -27,4 +27,4 @@ server.1=kafka1:2888:3888
 server.2=kafka2:2888:3888
 server.3=kafka3:2888:3888
 
-4lw.commands.whitelist=*
+zookeeper.4lw.commands.whitelist=*
