--- a/templates/kafka-cluster.zookeeper.properties.j2
+++ b/templates/kafka-cluster.zookeeper.properties.j2
@@ -27,4 +27,7 @@ server.1=kafka1:2888:3888
 server.2=kafka2:2888:3888
 server.3=kafka3:2888:3888
 
-zookeeper.4lw.commands.whitelist=*
+initLimit=5
+syncLimit=2
+
+4lw.commands.whitelist=*
