--- a/templates/kafka-cluster/server.properties.j2
+++ b/templates/kafka-cluster/server.properties.j2
@@ -33,7 +33,7 @@ listeners=PUBLIC://{{ ansible_hostname}}:9092,INTERNAL://{{ ansible_hostname}}:9
 # Hostname and port the broker will advertise to producers and consumers. If not set,
 # it uses the value for "listeners" if configured.  Otherwise, it will use the value
 # returned from java.net.InetAddress.getCanonicalHostName().
-advertised.listeners=PUBLIC://{{ ansible_hostname}}:9092
+advertised.listeners=PUBLIC://{{ ansible_hostname}}:9092,PRIVATE://{{ ansible_hostname}}:9093
 
 
 inter.broker.listener.name=INTERNAL
