--- a/templates/kafka-cluster/server.properties.j2
+++ b/templates/kafka-cluster/server.properties.j2
@@ -28,7 +28,7 @@ broker.id={{ ka_broker_id}}
 #     listeners = listener_name://host_name:port
 #   EXAMPLE:
 #     listeners = PLAINTEXT://your.host.name:9092
-listeners=PUBLIC://{{ ansible_hostname}}:9092,INTERNAL://{{ ansible_hostname}}:9093
+listeners=PUBLIC://{{ ansible_hostname}}:9092,PRIVATE://{{ ansible_hostname}}:9093
 
 # Hostname and port the broker will advertise to producers and consumers. If not set,
 # it uses the value for "listeners" if configured.  Otherwise, it will use the value
@@ -36,11 +36,11 @@ listeners=PUBLIC://{{ ansible_hostname}}:9092,INTERNAL://{{ ansible_hostname}}:9
 advertised.listeners=PUBLIC://{{ ansible_hostname}}:9092,PRIVATE://{{ ansible_hostname}}:9093
 
 
-inter.broker.listener.name=INTERNAL
+inter.broker.listener.name=PRIVATE
 
 
 # Maps listener names to security protocols, the default is for them to be the same. See the config documentation for more details
-listener.security.protocol.map=PUBLIC:PLAINTEXT,INTERNAL:PLAINTEXT
+listener.security.protocol.map=PUBLIC:PLAINTEXT,PRIVATE:PLAINTEXT
 
 # The number of threads that the server uses for receiving requests from the network and sending responses to the network
 num.network.threads=3
