--- a/roles/easyrsa/configure/templates/vars.j2
+++ b/roles/easyrsa/configure/templates/vars.j2
@@ -7,3 +7,4 @@ set_var EASYRSA_REQ_CITY       "ExampleCity"
 set_var EASYRSA_REQ_ORG        "ExampleOrg"
 set_var EASYRSA_REQ_EMAIL      "admin@example.com"
 set_var EASYRSA_REQ_OU         "Community"
+set_var EASYRSA_REQ_CN         "EASYRSA Root CA"
