--- a/templates/singlenode/kibana.yml.j2
+++ b/templates/singlenode/kibana.yml.j2
@@ -33,11 +33,32 @@ elasticsearch.hosts:  {{ kbn_elasticsearch_hosts }}
 
 {% if es_tls == true %}
 
+
+server.ssl.enabled: true
+
+{% if ca_provider == "elastic" %}
+
 elasticsearch.ssl.certificateAuthorities: /etc/kibana/certs/{{ es_clustername}}.crt
 
 server.ssl.certificate: /etc/kibana/certs/{{ es_clustername}}-{{ kbn_hostname }}.pem
 server.ssl.key: /etc/kibana/certs/{{ es_clustername}}-{{ kbn_hostname }}.key
-server.ssl.enabled: true
+
+{% endif %}
+
+
+{% if ca_provider == "easyrsa" %}
+
+
+
+server.ssl.certificate: "/etc/kibana/certs/{{kbn_hostname}}.crt"
+server.ssl.key: "/etc/kibana/certs/{{ kbn_hostname}}.key"
+
+elasticsearch.ssl.certificateAuthorities: [ "/etc/kibana/certs/{{ er_rootca}}.crt" ]
+
+{% endif %}
+
+
+
 
 {% endif %}
 
@@ -67,6 +88,10 @@ elasticsearch.username: "kibana_system"
 
 # Enables SSL and paths to the PEM-format SSL certificate and SSL key files, respectively.
 # These settings enable SSL for outgoing requests from the Kibana server to the browser.
+
+
+
+
 #server.ssl.enabled: false
 #server.ssl.certificate: /path/to/your/server.crt
 #server.ssl.key: /path/to/your/server.key
