--- a/roles/dns/configure/templates/reverse.db.j2
+++ b/roles/dns/configure/templates/reverse.db.j2
@@ -22,3 +22,5 @@ $TTL 86400
 8      IN  PTR     kafka1.{{ forward_zone}}.
 9      IN  PTR     kafka2.{{ forward_zone}}.
 10     IN  PTR     kafka3.{{ forward_zone}}.
+11     IN  PTR     pacemaker1.{{ forward_zone}}.
+12     IN  PTR     pacemaker2.{{ forward_zone}}.
