--- a/roles/dns/configure/templates/forward.db.j2
+++ b/roles/dns/configure/templates/forward.db.j2
@@ -22,6 +22,7 @@ minio       IN  A       {{ reverse_zone}}.7
 kafka1       IN  A       {{ reverse_zone}}.8
 kafka2       IN  A       {{ reverse_zone}}.9
 kafka3       IN  A       {{ reverse_zone}}.10
+rsyslog1       IN  A       {{ reverse_zone}}.13
 
 ;CNAME record
 ;ftp     IN CNAME        www.hosting.local.
