--- a/roles/dns/configure/templates/reverse.db.j2
+++ b/roles/dns/configure/templates/reverse.db.j2
@@ -22,3 +22,4 @@ $TTL 86400
 8      IN  PTR     kafka1.{{ forward_zone}}.
 9      IN  PTR     kafka2.{{ forward_zone}}.
 10     IN  PTR     kafka3.{{ forward_zone}}.
+13     IN  PTR     rsyslog1.{{ forward_zone}}.
