--- a/roles/dns/configure/templates/forward.db.j2
+++ b/roles/dns/configure/templates/forward.db.j2
@@ -23,6 +23,9 @@ kafka1       IN  A       {{ reverse_zone}}.8
 kafka2       IN  A       {{ reverse_zone}}.9
 kafka3       IN  A       {{ reverse_zone}}.10
 rsyslog1       IN  A       {{ reverse_zone}}.13
+kubernetes1       IN  A       {{ reverse_zone}}.14
+kubernetes2       IN  A       {{ reverse_zone}}.15
+kubernetes3       IN  A       {{ reverse_zone}}.16
 
 ;CNAME record
 ;ftp     IN CNAME        www.hosting.local.
