--- a/roles/dns/configure/templates/reverse.db.j2
+++ b/roles/dns/configure/templates/reverse.db.j2
@@ -23,3 +23,6 @@ $TTL 86400
 9      IN  PTR     kafka2.{{ forward_zone}}.
 10     IN  PTR     kafka3.{{ forward_zone}}.
 13     IN  PTR     rsyslog1.{{ forward_zone}}.
+14     IN  PTR     kubernetes1.{{ forward_zone}}.
+15     IN  PTR     kubernetes2.{{ forward_zone}}.
+16     IN  PTR     kubernetes3.{{ forward_zone}}.
