--- a/roles/kubernetes/configure/templates/kubeadminit.yml.j2
+++ b/roles/kubernetes/configure/templates/kubeadminit.yml.j2
@@ -4,6 +4,7 @@ kubernetesVersion: v1.23.2
 {% if k8_podnet_flannel == true %}
 networking:
   podSubnet: "10.244.0.0/16"
+  serviceSubnet: 10.96.0.0/16
 {% endif %}
 ---
 kind: KubeletConfiguration
