--- a/roles/kubernetes/bootstrap/templates/bootstrap.sh.j2
+++ b/roles/kubernetes/bootstrap/templates/bootstrap.sh.j2
@@ -5,11 +5,13 @@ sleep 60
 
 kubectl apply -f https://k8s.io/examples/admin/dns/dnsutils.yaml
 
-cd {{ k8_bootstrapdir}}
+cd {{ k8_bootstrap_dir}}
 
 kubectl apply -f pv.yaml
 kubectl apply -f sc.yaml
 kubectl apply -f pvc.yaml
+
+sleep 60
 
 kubectl apply -f  quickstart.yaml
 kubectl apply -f  kibana.yaml
