--- a/roles/kubernetes/bootstrap/templates/bootstrap.sh.j2
+++ b/roles/kubernetes/bootstrap/templates/bootstrap.sh.j2
@@ -15,3 +15,7 @@ sleep 60
 
 kubectl apply -f  quickstart.yaml
 kubectl apply -f  kibana.yaml
+
+kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.1/deploy/static/provider/cloud/deploy.yaml
+
+kubectl get pods --namespace=ingress-nginx
